# stupid

./: .gitignore  .gitmodules  CMakeLists.txt  README  cas.h  errors.h  tags  zlog.config
common/: Worker.h
doc/: design.drawio  design.drawio.drawio
src/: errors.h
src/Common/: ErrorCode.h  SharedPointer.h  UniquePointer.h
src/Peer/Attributes/: ArgsPack.cpp  ArgsPack.h  Attribute.h  BaudRate.h  CharacterSizeMask.cpp  CharacterSizeMask.h  ComArgsPack.cpp  ComArgsPack.h  StopBit.h
src/com_config/: com_config.cpp  com_config.h  com_defines.h
src/common/: ArgsPack.h  DataPack.h  Peer.h
src/stupid_lockfree_queue/: stupid_lockfree_queue.h  stupid_queue_node.h
src/stupid_lockfree_queue/test/: test1.cpp
src/tty_config/: tty_config.h  tty_defines.h
stupid_json/: stupid_json.h
stupid_lockfree_queue/: stupid_lockfree_queue.h
stupid_lockfree_queue/test/: makefile  test1.cc  test1.cpp  test1.out  test2.cpp  test2.out  test3.cpp
stupid_loggable/: stupid_loggable.cpp  stupid_loggable.h  stupid_loggable_impl.cpp  stupid_loggable_impl.h
test/: SharedPointer_test1.cpp
tty_config/: tty_config.cpp
